# physio-hermes-ops

./: .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  vercel.json
apps/: README.md
automation/: README.md
config/: mission_control_autonomy_policy.json
dashboard/: config.example.js  config.js  cron_status.json  index.html
dashboard-v2/: config.js  index.html
execution/: current-state.md
lineage/: dispatch_state.json  events.jsonl  generation_cycle_state.json  generation_history.jsonl  generation_state.json  heartbeat.json  ralph_loop_state.json  spawn_state.json  wave_queue.jsonl
profiles/: README.md  profile_creation_runbook_v0_1.md  toolset_allowlist_v0_1.yaml
scripts/: append_next_wave_from_generation.py  backfill_lineage_stream_context.py  backfill_ops_audit_profiles.py  biz_support_radar_guard.py  biz_support_radar_notion_upsert.py  build_automation_control_center_read_model.py  build_dashboard_read_models.py  capture_continuity_handoff.py  check_cron_registry.py  check_hermes_runtime_health.py  close_generation_cycle.py  codex_remote_smoke.py  continuity_callback_capture_server.py  continuity_handoff_notify_smoke.py  create_desktop_deploy_action.py  daily_ai_news_brief_guard.py  daily_ai_news_brief_notion_append.py  daily_rehab_brief_guard.py  daily_rehab_brief_notion_router.py  dispatch_wave_queue.py  emit_ops_reporter_brief.py  export_cron_status.py  finalize_generation_cycle.py  generate_morning_brief.py  heartbeat_ping.py  hometax_codef_client.py  ingest_discord_meeting_to_mission_control.py  (+21 more)
(+143 files in other folders)
